--- a/wwwroot/public/Layout/css/_Layout.css
+++ b/wwwroot/public/Layout/css/_Layout.css
@@ -158,17 +158,22 @@ footer {
         width:11rem;
     }
     footer {
-        position:absolute;
-        bottom:0px;
         display: block !important;
     }
 }
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+@media only screen  and (max-device-width : 1024px) {
     footer{
-        display:none;
+        display:none !important;
     }
     #nav{
         padding-right:0;
+    }
+    .bottomleft, .bottomright, #bottomleft {
+        border-left: none !important;
+        border-right: none !important;
+    }
+    .navtop>div:last-child{
+        display:none;
     }
 }
 @media only screen and (max-device-width : 360px) {
