--- a/wwwroot/public/Layout/css/_Layout.css
+++ b/wwwroot/public/Layout/css/_Layout.css
@@ -93,124 +93,7 @@ footer {
         color:#938f8f;
     }
 
+/*小于1024尺寸时改变样式*/
+@media only screen and (max-width: 1024px)  {
 
-@media only screen and (min-device-width : 375px) and (max-device-width : 667px) {
-    /*layout页的内容适配*/
-    .navtop>div{
-        padding:0;
-    }
-    .navtop > div:last-child{
-        display:none;
-    }
-    .navbottom .row{
-        font-size:10px;
-    }
-    .navbottom .row > div:first-child {
-        display: none;
-    }
-    #nav{
-        padding-top:0;
-        width:100%;
-    }
-    #nav li{
-        margin-left:5%;
-    }
-
-    footer{
-        display:none;
-    }
-
-    /*首页的内容适配*/
-    #topnewspaper{
-        padding:0;
-    }
-    #Hometop {
-        padding: 0;
-    }
-    ul li > div:first-child img {
-        width: 11rem;
-    }
-    /*适配茶故事*/
-    .topright{
-        padding:0;
-    }
-    .bottomright{
-        border-top:1px solid #ff0000;
-    }
-    #bottomright, #bottomleft, .bottomleft, .bottomright {
-        border-left: none !important;
-        border-right: none !important;
-    }
-    .modalaclist > ul > li img {
-        width: 130px;
-    }
-
-    .modalaclist > ul > li > div:first-child {
-        margin-right: 70px;
-    }
-    main.news_list_detail_met_16_3 {
-        margin: 0;
-        padding: 0;
-    }
-}
-@media only screen and (min-device-width : 1024px) and (max-device-width : 1366px) {
-    #topnewspaper ul li:first-child img {
-        width:11rem;
-    }
-    footer {
-        display: block !important;
-    }
-}
-@media only screen  and (max-device-width : 1024px) {
-    footer{
-        display:none !important;
-    }
-    #nav{
-        padding-right:0;
-    }
-    .bottomleft, .bottomright, #bottomleft {
-        border-left: none !important;
-        border-right: none !important;
-    }
-    .navtop>div:last-child{
-        display:none;
-    }
-}
-@media only screen and (max-device-width : 360px) {
-    .navbottom>.row>div:first-child{
-        display:none;
-        font-size:12px;
-    }
-    #nav li{
-        margin-left:10px;
-    }
-    .navtop>div:last-child{
-        display:none;
-    }
-    #bottomleft{
-        border-right:none !important;
-    }
-    footer{
-        display:none;
-    }
-    #topnewspaper > ul > li img, #bottomleft > ul > li img, #bottomright > ul > li img{
-        width: 130px;
-    }
-    .bottomleft, .bottomright {
-        border-left: none !important;
-        border-right: none !important;
-    }
-    .modalaclist>ul>li img{
-        width:130px;
-    }
-    .modalaclist > ul > li>div:first-child{
-        margin-right:50px;
-    }
-    .newspaper{
-        border-left:none !important;
-    }
-    main.news_list_detail_met_16_3 {
-        margin: 0;
-        padding:0;
-    }
 }
